--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <footer class="footer">
-        <p>This page was created with <a href="https://github.com/k-ishii1020/pdf-slide-viewer-for-github-pages" target="_blank">PDF Slide Viewer for GitHub Pages</a>.</p>
+        <p>This page was created with<br> <a href="https://github.com/k-ishii1020/pdf-slide-viewer-for-github-pages" target="_blank">PDF Slide Viewer for GitHub Pages</a>.</p>
         <p>&copy; <span id="year"></span> <span id="username"></span>. All rights reserved.</p>
     </footer>
 
